Update 'ftdiymfok-java-quarkus' component image to: quay.io/jsmid/rhtap-qe-java-quarkus:6401773265f90c1d06c33b9b5f7ae100359dde75@sha256:24d0e4bbb03e5d156c11108b3bb42e06865d8072ba45179f1e590b849d67e5eb

--- a/components/ftdiymfok-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ftdiymfok-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ftdiymfok-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe-java-quarkus:6401773265f90c1d06c33b9b5f7ae100359dde75@sha256:24d0e4bbb03e5d156c11108b3bb42e06865d8072ba45179f1e590b849d67e5eb
+          name: container-image
